﻿$Revision$
	$Author $Date$
	1. history.ru.txt
	2. FarColorer 1.0.2.6

#Revision: 1475
	Author: ctapmex Date: 2010-04-15 14:20:02 +0600 (Чт, 15 апр 2010)
	1. окно Outliner в фильтр принимает ~.
	2. ошибка работы "креста" при выборе типа раскраски

#Revision: 1468
	Author: ctapmex Date: 2010-03-18 10:12:29 +0500 (Чт, 18 мар 2010)
	1. окно Outliner в фильтр принимает цифры с цифровой клавиатуры.

#Revision: 1440
	Author: ctapmex Date: 2010-03-07 21:01:55 +0500 (Вс, 07 мар 2010)
	1. борьба с warning

#Revision: 1439
	Author: ctapmex Date: 2010-03-07 20:13:07 +0500 (Вс, 07 мар 2010)
	1. некоторые warnings
	2. версия бибилиотеки 1.0.2.6

#Revision: 1435
	Author: ctapmex Date: 2010-03-06 17:54:19 +0500 (Сб, 06 мар 2010)
	1. FarColorer 1.0.2.5

#Revision: 1432
	Author: ctapmex Date: 2010-03-06 15:36:28 +0500 (Сб, 06 мар 2010)
	1. слияние с ctapmex-far2colorer r1397,r1425,r1430 
		(1. makefile для MinGW 2. форматирование кода под стандарт)

#Revision: 1382
  Author: ctapmex Date: 2010-02-12 15:46:52 +0500 (Пт, 12 фев 2010)
	1. убраны неиспользуемые переменные
	2. добавлена проверка на null

#Revision: 1381
  Author: ctapmex Date: 2010-02-12 14:18:35 +0500 (Пт, 12 фев 2010)
	1. ошибка доступа при вызове EnableColorer не находясь в редакторе
	2. поправлен размер диалога настроек
	3. обновлен far2sdk
	4. из OpenPluginW убраны ненужные действия

#Revision: 1380
  Author: ctapmex Date: 2010-02-12 12:29:27 +0500 (Пт, 12 фев 2010)
	1. реализована очистка всех окон редактора при отключении плагина.

#Revision: 1379
  Author: ctapmex Date: 2010-02-12 09:55:35 +0500 (Пт, 12 фев 2010)
	1. поправлены makefile для учета нового tools.cpp
		!!Но, в shared в непонятной (не нужной?) папке exparse есть свой tools... надо что то делать
	2. для dropAllEditors добавлен параметр "чистить или нет последствия работы"
	3. ускоряем cleanEditor() за счет хака far

#Revision: 1378
  Author: ctapmex Date: 2010-02-11 23:43:09 +0500 (Чт, 11 фев 2010)