@@ -1,5 +1,10 @@
 ﻿$Revision$
-	$Author $Date$
+	$Author$ $Date$
+	1. создаем editorSet только при реальной работе или открытии окна настроек
+	2. инициализая указателей
+
+#Revision: 1477
+	Author ctapmex Date: 2010-04-15 19:47:55 +0600 (Чт, 15 апр 2010)
 	1. history.ru.txt
 	2. FarColorer 1.0.2.6
 
